--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -14,6 +14,7 @@
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
+    <button class="btn btn-primary" type="button" onclick="location.href='/hi'">Back</button>
 </form>
 
 {{>layouts/footer}}
