--- a/src/main/resources/templates/greetings.mustache
+++ b/src/main/resources/templates/greetings.mustache
@@ -5,4 +5,8 @@
     <h1>{{username}}님, 반갑습니다!</h1>
 </div>
 
+<button class="btn btn-primary" type="button" onclick="location.href='/members/new'">회원가입</button>
+<button class="btn btn-primary" type="button" onclick="location.href='/articles/new'">글쓰기</button>
+
+
 {{>layouts/footer}}
