--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -13,8 +13,8 @@
         <textarea class="form-control" rows="3" name="content"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
-    <button class="btn btn-primary" type="button" onclick="location.href='/hi'">Back</button>
+    <a href="/articles" class="btn btn-primary" >돌아가기</a>
+    <button type="submit" class="btn btn-primary"style="float:right;">완료</button>
 </form>
 
 {{>layouts/footer}}
