--- a/src/main/resources/templates/greetings.mustache
+++ b/src/main/resources/templates/greetings.mustache
@@ -6,7 +6,7 @@
 </div>
 
 <button class="btn btn-primary" type="button" onclick="location.href='/members/new'">회원가입</button>
-<button class="btn btn-primary" type="button" onclick="location.href='/articles/new'">글쓰기</button>
+<button class="btn btn-primary" type="button" onclick="location.href='/articles'">게시판</button>
 
 
 {{>layouts/footer}}
